[gd_scene load_steps=4 format=3 uid="uid://dq8dw05ismjpj"]

[ext_resource type="Texture2D" uid="uid://coxs2ya4a8sua" path="res://resources/sprites/units/brawler.png" id="1_8npfr"]
[ext_resource type="Script" uid="uid://csmufvaoy4iva" path="res://ui/battle_prep_new/graveyard/tombstone/tombstone.gd" id="1_w6ula"]
[ext_resource type="Script" uid="uid://cocfcmwelj8nc" path="res://ui/shared/general_menu_button/general_menu_button.gd" id="2_rxr3r"]

[node name="Tombstone" type="VBoxContainer"]
custom_minimum_size = Vector2(200, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w6ula")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="UnitContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="UnitIcon" type="TextureRect" parent="PanelContainer/MarginContainer/UnitContainer"]
layout_mode = 2
texture = ExtResource("1_8npfr")
expand_mode = 5

[node name="UnitNameLabel" type="Label" parent="PanelContainer/MarginContainer/UnitContainer"]
layout_mode = 2
text = "Unit Name"
horizontal_alignment = 1

[node name="ReviveButton" type="Button" parent="."]
layout_mode = 2
text = "Revive: 0G"
script = ExtResource("2_rxr3r")
metadata/_custom_type_script = "uid://cocfcmwelj8nc"

[connection signal="focus_entered" from="ReviveButton" to="ReviveButton" method="_on_focus_entered"]
[connection signal="pressed" from="ReviveButton" to="." method="_on_revive_button_pressed"]
[connection signal="pressed" from="ReviveButton" to="ReviveButton" method="_on_pressed"]
